refactor for better font size on mobile

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 						<div class="inner">
 							<div class="logo"><span class="icon"><i class="fas fa-laptop-code"></i></span></div>
 							<h2>Hi, I'm Alder Moreno!</h2>
-							<p>California State University, Sacramento</br>
-							   College of Engineering and Computer Science Alumni - Spring 22'</br>
-								   <a href="https://www.linkedin.com/in/alder-moreno-9b28211a5/" target="_blank" class="icon brands fa-linkedin"></a></li>
-								   <a href="https://github.com/aldermo98" target="_blank" class="icon brands fa-github"></a></li>
-							   
-							   
+							<p>
+								California State University, Sacramento</br>
+							    College of Engineering and Computer Science Alumni - Spring 22'</br>
+								<a href="https://www.linkedin.com/in/alder-moreno-9b28211a5/" target="_blank" class="icon brands fa-linkedin"></a>
+								<a href="https://github.com/aldermo98" target="_blank" class="icon brands fa-github"></a>
+							</p>
 						</div>
 					</section>
 
