added some projects and other info

--- a/guiProjects.html
+++ b/guiProjects.html
@@ -45,7 +45,11 @@
 						<header id="banner">
 							<div class="inner">
 								<h2>GUI Projects</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<p>
+									These project are all based in Java and comprise of the bulk of my learning 
+									in other skills such as GUI libraries, software design patterns, leadership, 
+									teamwork, documentation, agile methodologies, and many more. 
+								</p>
 							</div>
 						</header>
 
@@ -53,18 +57,31 @@
 							<div class="wrapper">
 								<div class="inner">
 
+									<p class="center">
+										**All projects are available through <a href="http://replit.com/@Amoreno98" target="_blank">Replit</a> 
+										and <a href="http://github.com/aldermo98" target="_blank">Github</a> for download. Currently, 
+										only Electric Usage Calculator is available for preview online. However the other 
+										projects can still be downloaded and ran locally.
+									</p>
+
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
+											<a href="https://replit.com/@Amoreno98/3DGraphics" target="_blank" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<h3 class="major">3D Spinning Cube</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://replit.com/@Amoreno98/3DGraphics" class="special">Source Code and Preview</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
+											<a href="https://replit.com/@Amoreno98/AntGame" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<h3 class="major">Ant Game</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://replit.com/@Amoreno98/AntGame" class="special">Source Code and Preview</a>
+										</article>
+										<article>
+											<a href="https://replit.com/@Amoreno98/ElectricUsageCalculator" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<h3 class="major">Electric Usage Calculator</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="https://replit.com/@Amoreno98/ElectricUsageCalculator" class="special">Source Code and Preview</a>
 										</article>
 									</section>
 
