--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 								<li><a href="webProjects.html">Web Projects</a></li>
 								<li><a href="guiProjects.html">GUI Projects</a></li>
 								<li><a href="miniPrograms.html">Mini Programs</a></li>
+								<li><a href="#footer">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -47,7 +48,8 @@
 							<h2>Hi, I'm Alder Moreno!</h2>
 							<p>
 								California State University, Sacramento</br>
-							    College of Engineering and Computer Science Alumni - Spring 22'</br>
+							    College of Engineering and Computer Science Alumni | Spring 22'</br>
+								B.S. in Computer Science</br>
 								<a href="https://www.linkedin.com/in/alder-moreno-9b28211a5/" target="_blank" class="icon brands fa-linkedin"></a>
 								<a href="https://github.com/aldermo98" target="_blank" class="icon brands fa-github"></a>
 							</p>
