--- a/miniPrograms.html
+++ b/miniPrograms.html
@@ -56,17 +56,21 @@
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
+									
+									<p class="center">
+										**Much more coming soon...
+									</p>
 
 									<section class="features">
 										<article>
-											<h3 class="major">Mini Program 1</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="https://replit.com/@Amoreno98/"  target="_blank" class="special">Source Code and Preview</a>
+											<h3 class="major">Tic Tac Toe</h3>
+											<p>This Tic-Tac-Toe game involves 2 players</p>
+											<a href="https://replit.com/@Amoreno98/TicTacToe"  target="_blank" class="special">Source Code and Preview</a>
 										</article>
 										<article>
-											<h3 class="major">Mini Program 2</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="https://replit.com/@Amoreno98/"  target="_blank" class="special">Source Code and Preview</a>
+											<h3 class="major">Battlefield</h3>
+											<p>This simple battlefield game involves 2 players.</p>
+											<a href="https://replit.com/@Amoreno98/Battlefield"  target="_blank" class="special">Source Code and Preview</a>
 										</article>
 									</section>
 
