--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta property='og:title' content='AMPortfolio'/>
-		<meta property='og:image' content='https://i.ibb.co/3FCn8Rs/thumbnail.jpg'/>
+		<meta property='og:image' content='https://i.ibb.co/GFzfbTb/thumbnail.jpg'/>
 		<meta property='og:description' content="Alder's Portfolio"/>
 		<meta property='og:url' content='https://aldermoreno.com'/>
-		<meta property='og:image:width' content='1351' />
-		<meta property='og:image:height' content='638' />
+		<meta property='og:image:width' content='1200' />
+		<meta property='og:image:height' content='627' />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
