link updates and update messages

--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
 								
 								<ul class="contact">
 									<h2>Highlighted Projects</h2>
-									<li><a href="#">Project1</a></li>
-									<li><a href="#">Project2</a></li>
-									<li><a href="#">Project3</a></li>
-									<li><a href="#">Project4</a></li>
+									<li><a href="guiProjects.html#euc">Electricity Bill Calculator</a></li>
+									<li><a href="miniPrograms.html#bf">Battlefield</a></li>
+									<li><a href="webProjects.html#anc">Restaurant Website</a></li>
+									<li><a href="guiProjects.html#3d">3D Spinning Cube</a></li>
 								</ul>
 						</div>
 					</section>
