--- a/webProjects.html
+++ b/webProjects.html
@@ -35,6 +35,7 @@
 								<li><a href="webProjects.html">Web Projects</a></li>
 								<li><a href="guiProjects.html">GUI Projects</a></li>
 								<li><a href="miniPrograms.html">Mini Programs</a></li>
+								<li><a href="#footer">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -45,7 +46,7 @@
 						<header id="banner">
 							<div class="inner">
 								<h2>Web Projects</h2>
-								<p>These web applications were built using HTML, JavaScript, React.js, and CSS </p>
+								<p>These web applications were built using HTML, JavaScript, React.js, and CSS</p>
 							</div>
 						</header>
 
@@ -53,10 +54,12 @@
 							<div class="wrapper">
 								<div class="inner">
 
+									<p class="center">Site is still under development and more projects will continue to be added</p>
+
 									<section class="features">
-										<article>
+										<article id="anc">
 											<a href="asianncajun2.com" target="_blank"  target="_blank" class="image"><img src="images/asianncajun2.jpg" alt="" /></a>
-											<h3 class="major">Asian N Cajun 2</h3>
+											<h3 class="major">Asian N Cajun 2 | Coming soon</h3>
 											<p>
 												This website was built from scratch for a local Fair Oaks restaurant known for its 
 											    unique fusion of asian and southern cajun food. It was created using React.JS and 
@@ -104,10 +107,10 @@
 								
 								<ul class="contact">
 									<h2>Highlighted Projects</h2>
-									<li><a href="#">Project1</a></li>
-									<li><a href="#">Project2</a></li>
-									<li><a href="#">Project3</a></li>
-									<li><a href="#">Project4</a></li>
+									<li><a href="guiProjects.html#euc">Electricity Bill Calculator</a></li>
+									<li><a href="miniPrograms.html#bf">Battlefield</a></li>
+									<li><a href="webProjects.html#anc">Restaurant Website</a></li>
+									<li><a href="guiProjects.html#3d">3D Spinning Cube</a></li>
 								</ul>
 						</div>
 					</section>
