--- a/guiProjects.html
+++ b/guiProjects.html
@@ -35,6 +35,7 @@
 								<li><a href="webProjects.html">Web Projects</a></li>
 								<li><a href="guiProjects.html">GUI Projects</a></li>
 								<li><a href="miniPrograms.html">Mini Programs</a></li>
+								<li><a href="#footer">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -57,6 +58,8 @@
 							<div class="wrapper">
 								<div class="inner">
 
+									<p class="center">Site is still under development and more projects will continue to be added</p>
+
 									<p class="center">
 										**All projects are available through <a href="http://replit.com/@Amoreno98" target="_blank">Replit</a> 
 										and <a href="http://github.com/aldermo98" target="_blank">Github</a> for download. Currently, 
@@ -65,7 +68,7 @@
 									</p>
 
 									<section class="features">
-										<article>
+										<article id="3d">
 											<a href="https://replit.com/@Amoreno98/3DGraphics" target="_blank" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">3D Spinning Cube</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
@@ -77,7 +80,7 @@
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="https://replit.com/@Amoreno98/AntGame" class="special">Source Code and Preview</a>
 										</article>
-										<article>
+										<article id="euc">
 											<a href="https://replit.com/@Amoreno98/ElectricUsageCalculator" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Electric Usage Calculator</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
@@ -109,10 +112,10 @@
 								
 								<ul class="contact">
 									<h2>Highlighted Projects</h2>
-									<li><a href="#">Project1</a></li>
-									<li><a href="#">Project2</a></li>
-									<li><a href="#">Project3</a></li>
-									<li><a href="#">Project4</a></li>
+									<li><a href="guiProjects.html#euc">Electricity Bill Calculator</a></li>
+									<li><a href="miniPrograms.html#bf">Battlefield</a></li>
+									<li><a href="webProjects.html#anc">Restaurant Website</a></li>
+									<li><a href="guiProjects.html#3d">3D Spinning Cube</a></li>
 								</ul>
 						</div>
 					</section>
