--- a/miniPrograms.html
+++ b/miniPrograms.html
@@ -35,6 +35,7 @@
 								<li><a href="webProjects.html">Web Projects</a></li>
 								<li><a href="guiProjects.html">GUI Projects</a></li>
 								<li><a href="miniPrograms.html">Mini Programs</a></li>
+								<li><a href="#footer">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -56,10 +57,8 @@
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
-									
-									<p class="center">
-										**Much more coming soon...
-									</p>
+
+									<p class="center">Site is still under development and more projects will continue to be added</p>
 
 									<section class="features">
 										<article>
@@ -67,12 +66,16 @@
 											<p>This Tic-Tac-Toe game involves 2 players</p>
 											<a href="https://replit.com/@Amoreno98/TicTacToe"  target="_blank" class="special">Source Code and Preview</a>
 										</article>
-										<article>
+										<article id="bf">
 											<h3 class="major">Battlefield</h3>
 											<p>This simple battlefield game involves 2 players.</p>
 											<a href="https://replit.com/@Amoreno98/Battlefield"  target="_blank" class="special">Source Code and Preview</a>
 										</article>
 									</section>
+
+									<p class="center">
+										More coming soon...
+									</p>
 
 								</div>
 							</div>
@@ -99,10 +102,10 @@
 								
 								<ul class="contact">
 									<h2>Highlighted Projects</h2>
-									<li><a href="#">Project1</a></li>
-									<li><a href="#">Project2</a></li>
-									<li><a href="#">Project3</a></li>
-									<li><a href="#">Project4</a></li>
+									<li><a href="guiProjects.html#euc">Electricity Bill Calculator</a></li>
+									<li><a href="miniPrograms.html#bf">Battlefield</a></li>
+									<li><a href="webProjects.html#anc">Restaurant Website</a></li>
+									<li><a href="guiProjects.html#3d">3D Spinning Cube</a></li>
 								</ul>
 						</div>
 					</section>
