grammar check and menu refactor

--- a/miniPrograms.html
+++ b/miniPrograms.html
@@ -21,8 +21,14 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">AMPortfolio</a></h1>
+						
 						<nav>
-							<a href="#menu">Menu</a>
+							<a href="index.html">Home</a>
+							<a href="webProjects.html">Web Projects</a>
+							<a href="guiProjects.html">GUI Projects</a>
+							<a href="miniPrograms.html">Mini Programs</a>
+							<a href="#footer">Contact</a>
+							<a href="#menu" id="a_menu">Menu</a>
 						</nav>
 					</header>
 
@@ -88,7 +94,7 @@
 								<ul class="contact">
 									<h2>Contact</h2>
 									<li><a href="mailto: morenoalder98@gmail.com">Email</a></li>
-									<li><a href="https://www.linkedin.com/in/alder-moreno-9b28211a5/">LinkedIn</a></li>
+									<li><a href="https://www.linkedin.com/in/aldermoreno">LinkedIn</a></li>
 									<li><a href="https://github.com/aldermo98">Github</a></li>
 								</ul>
 								
