--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon"><i class="fas fa-laptop-code"></i></span></div>
-							<h2>Hi, I'm Alder Moreno!</h2>
+							<div class="image"><img src="images/portrait.jpg" alt="portrait"></div>
+							<h2 class="main">Hi, I'm Alder Moreno!</h2>
 							<p>
 								California State University, Sacramento</br>
 							    College of Engineering and Computer Science Alumni | Spring '22</br>
@@ -407,6 +407,9 @@
 					</section>
 
 			</div>
+			<div id="myModal" class="modal">
+				<img class="modal-content" id="img01">
+			 <div id="caption"></div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
