--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
 							<div class="image"><img src="images/portrait.jpg" alt="portrait"></div>
 							<h2 class="main">Hi, I'm Alder Moreno!</h2>
 							<p>
+								Freelance Web Developer | Aspiring Software Developer<br>
 								California State University, Sacramento</br>
 							    College of Engineering and Computer Science Alumni | Spring '22</br>
 								B.S. in Computer Science</br>
 								<a href="https://www.linkedin.com/in/aldermoreno/" target="_blank" class="icon brands fa-linkedin"></a>
 								<a href="https://github.com/aldermo98" target="_blank" class="icon brands fa-github"></a>
 							</p>
+							<h3 class="center"><a href="#footer">Contact</a> me for any of your website needs!</h3>
 						</div>
               
 					</section>
