--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
 <html>
 	<head>
 		<title>AMPortfolio</title>
-		<link rel="icon" type="image/x-icon" href="/images/favicon.svg">
+	
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta property='og:title' content='AMPortfolio'/>
-		<meta property='og:image' content='https://i.ibb.co/GFzfbTb/thumbnail.jpg'/>
-		<meta property='og:description' content="Alder's Portfolio"/>
+		<meta name="title" property='og:title' content='AMPortfolio'/>
+		<meta name="description" property='og:description' content="Alder's Portfolio"/>
+		<meta name="image" property='og:image' content='https://i.ibb.co/GFzfbTb/thumbnail.jpg'/>
+		<meta name="author" content="Alder Moreno"/>
 		<meta property='og:url' content='https://aldermoreno.com'/>
 		<meta property='og:image:width' content='1200' />
 		<meta property='og:image:height' content='627' />
+		<meta property="og:type" content="Website"/>
+
+		<link rel="icon" type="image/x-icon" href="/images/favicon.svg">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
