--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="title" property='og:title' content='AMPortfolio'/>
 		<meta name="description" property='og:description' content="Alder's Portfolio"/>
-		<meta name="image" property='og:image' content='https://i.ibb.co/GFzfbTb/thumbnail.jpg'/>
+		<meta name="image" property='og:image' content='https://live.staticflickr.com/65535/51968379811_d7fb68d0f9_b.jpg'/>
 		<meta name="author" content="Alder Moreno"/>
 		<meta property='og:url' content='https://aldermoreno.com'/>
 		<meta property='og:image:width' content='1200' />
