--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="title" property='og:title' content='AMPortfolio'/>
-		<meta name="description" property='og:description' content="Alder's Portfolio"/>
+		<meta name="description" property='og:description' content="Alder Moreno's professional portfolio"/>
 		<meta name="image" property='og:image' content='https://live.staticflickr.com/65535/51968379811_d7fb68d0f9_b.jpg'/>
 		<meta name="author" content="Alder Moreno"/>
 		<meta property='og:url' content='https://aldermoreno.com'/>
-		<meta property='og:image:width' content='1200' />
-		<meta property='og:image:height' content='627' />
 		<meta property="og:type" content="Website"/>
 
 		<link rel="icon" type="image/x-icon" href="/images/favicon.svg">
