enable page zooming on all pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>AMPortfolio</title>
 	
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="title" property='og:title' content='AMPortfolio'/>
 		<meta name="description" property='og:description' content="Alder Moreno's professional portfolio"/>
 		<meta name="image" property='og:image' content='https://live.staticflickr.com/65535/51968379811_d7fb68d0f9_b.jpg'/>
