--- a/miniPrograms.html
+++ b/miniPrograms.html
@@ -7,9 +7,17 @@
 <html>
 	<head>
 		<title>AMPortfolio</title>
-		<link rel="icon" type="image/x-icon" href="/images/favicon.svg">
+	
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="title" property='og:title' content='AMPortfolio'/>
+		<meta name="description" property='og:description' content="Alder Moreno's professional portfolio"/>
+		<meta name="image" property='og:image' content='https://live.staticflickr.com/65535/51968379811_d7fb68d0f9_b.jpg'/>
+		<meta name="author" content="Alder Moreno"/>
+		<meta property='og:url' content='https://aldermoreno.com'/>
+		<meta property="og:type" content="Website"/>
+
+		<link rel="icon" type="image/x-icon" href="/images/favicon.svg">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
