added DOJ project

--- a/webProjects.html
+++ b/webProjects.html
@@ -71,8 +71,9 @@
 									<p class="center">Site is still under development and more projects will continue to be added</p>
 
 									<section class="features">
+										
 										<article id="anc">
-											<a href="asianncajun2.com" target="_blank"  target="_blank" class="image"><img src="images/asianncajun2.jpg" alt="" /></a>
+											<a href="asianncajun2.com" target="_blank" class="image"><img src="images/asianncajun2.jpg" alt="Asian n Cajun thumbnail" /></a>
 											<h3 class="major">Asian N Cajun 2 | Coming soon</h3>
 											<p>
 												This website was built from scratch for a local Fair Oaks restaurant known for its 
@@ -82,7 +83,7 @@
 											<a href="asianncajun2.com"  target="_blank" class="special">Source Code and Preview</a>
 										</article>
 										<article>
-											<a href="https://replit.com/@Amoreno98/PrestigeBotanicals"  target="_blank" class="image"><img src="images/prestigebotanicals.jpg" alt="" /></a>
+											<a href="https://replit.com/@Amoreno98/PrestigeBotanicals"  target="_blank" class="image"><img src="images/prestigebotanicals.jpg" alt="Prestige Botanicals thumbnail" /></a>
 											<h3 class="major">Prestige Botanicals</h3>
 											<p>
 												This was my very first web application started right after my self-teachings through 
@@ -93,6 +94,26 @@
 												HTML, JS, and CSS.
 											</p>
 											<a href="https://replit.com/@Amoreno98/PrestigeBotanicals"  target="_blank" class="special">Source Code and Preview</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/thumbnail.jpg" alt="AMPortfolio thumbnail"/></a>
+											<h3 class="major">AMPortfolio</h3>
+											<p>
+												This website portfolio I've published is based off html5up's Solid State template 
+												and has been modified with HTML, CSS, and JS. It is currently being hosted through Netlify. 
+											</p>
+											<a href="#" class="special">Source Code and Preview</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="Enterprise web application thumbnail"/></a>
+											<h3 class="major">California Department of Justice | Enterprise Web Application | Coming soon</h3>
+											<p>
+												This large-scale project has been in the development process for ~2 years and has been a great source 
+												of my learning and web development experience. From exposure to extremely useful frontend UI libraries such as DataTables, 
+												to Java back-end API development, JasperReports, agile methodologies, and everything in between, this project is sure to
+												have touched on most main skills necessary to prepare me in taking on many more web development jobs.  
+											</p>
+											<a href="#" class="special">Source Code and Preview</a>
 										</article>
 									</section>
 
