updated landing page content

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 										<h2 class="major">Application Development</h2>
 										<p>
 											Through college courses I was also able to obtain knowledge on Application Development as well as gain leadership 
-											skills through team projects. Programming skills learned through these experiences include Java Swing and 
+											experience through team projects. Programming skills learned through these experiences include Java Swing and 
 											CodenameOne GUI libraries as well as 3D computer graphics programming.
 										</p>
 										<a href="guiProjects.html" class="special">Learn more</a>
@@ -345,20 +345,21 @@
 										<article>
 											<h3 class="major">Skills</h3>
 											<ul>
-												<li>HTML, JavaScript, CSS, ReactJS, SQL</li>
-												<li>Endpoint/API testing w/ Postman</li>
-												<li>Java including GUI libraries such as Swing an CodenameOne</li>
-												<li>C++</li>
+												<li>HTML, JavaScript, CSS, ReactJS</li>
+												<li>Java, C, C++, Python, Functional Programming with Racket</li>
+												<li>SQL, NodeJS, Firebase</li>
+												<li>Dynamic and Object-Oriented Programming</li>
 												<details>
 													<summary>Read More</summary>
 													<div class="content">
-														<li>Dynamic Programming</li>
-														<li>Object Oriented Programming</li>
+														<li>OpenGL 3D Graphics and Design</li>
 														<li>Git/Subversion</li>
-														<li>SQL</li>
+														<li>
+															Postman, Eclipse, VSCode, JasperReports, SQLDeveloper, GitHub, 
+															Jira, JBoss EAP, SonarQube, and other developer tools
+														</li>
 														<li>Linux/Unix</li>
-														<li>OpenGL 3D graphics and design</li>
-														<li>Teamwork</li>
+														<li>Teamwork (Scrum) and Agile Methodologies</li>
 														<li>Detail-oriented - Do it right or do it twice!</li>
 														<li>Highly motivated with an extreme drive to learn, improve, and contribute</li>
 													</div>
