--- a/webProjects.html
+++ b/webProjects.html
@@ -49,6 +49,7 @@
 								<li><a href="webProjects.html">Web Projects</a></li>
 								<li><a href="guiProjects.html">GUI Projects</a></li>
 								<li><a href="miniPrograms.html">Mini Programs</a></li>
+								<li><a href="https://drive.google.com/file/d/1uMemajw0HOsVo93m4uziUC6hNkf4i4NF/view?usp=sharing" target="_blank">Resume</a></li>
 								<li><a href="#footer">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -138,6 +139,7 @@
 									<li><a href="webProjects.html">Web Projects</a></li>
 									<li><a href="guiProjects.html">GUI Projects</a></li>
 									<li><a href="miniPrograms.html">Mini Programs</a></li>
+									<li><a href="https://drive.google.com/file/d/1uMemajw0HOsVo93m4uziUC6hNkf4i4NF/view?usp=sharing" target="_blank">Resume</a></li>
 								</ul>
 								
 								<ul class="contact">
