partial update of experience

--- a/webProjects.html
+++ b/webProjects.html
@@ -35,7 +35,7 @@
 							<a href="webProjects.html">Web Projects</a>
 							<a href="guiProjects.html">GUI Projects</a>
 							<a href="miniPrograms.html">Mini Programs</a>
-							<a href="#footer">Contact</a>
+							<a href="mailto: morenoalder98@gmail.com">Contact</a>
 							<a href="#menu" id="a_menu">Menu</a>
 						</nav>
 					</header>
@@ -49,8 +49,8 @@
 								<li><a href="webProjects.html">Web Projects</a></li>
 								<li><a href="guiProjects.html">GUI Projects</a></li>
 								<li><a href="miniPrograms.html">Mini Programs</a></li>
-								<li><a href="https://drive.google.com/file/d/1Nj3xPRTv2WB6tv0srPLBVSoQ7_i_Bqms/view?usp=sharing" target="_blank">Resume</a></li>
-								<li><a href="#footer">Contact</a></li>
+								<li><a href="https://drive.google.com/file/d/1k2zYp1jXsXZ638h4ejr0wSJajHi5KzgZ/view?usp=sharing" target="_blank">Resume</a></li>
+								<li><a href="mailto: morenoalder98@gmail.com">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -69,19 +69,19 @@
 							<div class="wrapper">
 								<div class="inner">
 
-									<p class="center">Site is still under development and more projects will continue to be added</p>
+									<p class="center">More projects will be added as I continue with updates</p>
 
 									<section class="features">
 										
 										<article id="anc">
-											<a href="asianncajun2.com" target="_blank" class="image"><img src="images/asianncajun2.jpg" alt="Asian n Cajun thumbnail" /></a>
+											<a href="https://asiancajun2.com" target="_blank" class="image"><img src="images/asianncajun2.jpg" alt="Asian n Cajun thumbnail" /></a>
 											<h3 class="major">Asian N Cajun 2 | Coming soon</h3>
 											<p>
 												This website was built from scratch for a local Fair Oaks restaurant known for its 
 											    unique fusion of asian and southern cajun food. It was created using React.JS and 
 												Google's Firebase platform for the database. 
 											</p>
-											<a href="asianncajun2.com"  target="_blank" class="special">Source Code and Preview</a>
+											<a href="https://asiancajun2.com"  target="_blank" class="special">Source Code and Preview</a>
 										</article>
 										<article>
 											<a href="https://replit.com/@Amoreno98/PrestigeBotanicals"  target="_blank" class="image"><img src="images/prestigebotanicals.jpg" alt="Prestige Botanicals thumbnail" /></a>
@@ -139,7 +139,7 @@
 									<li><a href="webProjects.html">Web Projects</a></li>
 									<li><a href="guiProjects.html">GUI Projects</a></li>
 									<li><a href="miniPrograms.html">Mini Programs</a></li>
-									<li><a href="https://drive.google.com/file/d/1Nj3xPRTv2WB6tv0srPLBVSoQ7_i_Bqms/view?usp=sharing" target="_blank">Resume</a></li>
+									<li><a href="https://drive.google.com/file/d/1k2zYp1jXsXZ638h4ejr0wSJajHi5KzgZ/view?usp=sharing" target="_blank">Resume</a></li>
 								</ul>
 								
 								<ul class="contact">
