--- a/miniPrograms.html
+++ b/miniPrograms.html
@@ -35,7 +35,7 @@
 							<a href="webProjects.html">Web Projects</a>
 							<a href="guiProjects.html">GUI Projects</a>
 							<a href="miniPrograms.html">Mini Programs</a>
-							<a href="#footer">Contact</a>
+							<a href="mailto: morenoalder98@gmail.com">Contact</a>
 							<a href="#menu" id="a_menu">Menu</a>
 						</nav>
 					</header>
@@ -49,8 +49,8 @@
 								<li><a href="webProjects.html">Web Projects</a></li>
 								<li><a href="guiProjects.html">GUI Projects</a></li>
 								<li><a href="miniPrograms.html">Mini Programs</a></li>
-								<li><a href="https://drive.google.com/file/d/1Nj3xPRTv2WB6tv0srPLBVSoQ7_i_Bqms/view?usp=sharing" target="_blank">Resume</a></li>
-								<li><a href="#footer">Contact</a></li>
+								<li><a href="https://drive.google.com/file/d/1k2zYp1jXsXZ638h4ejr0wSJajHi5KzgZ/view?usp=sharing" target="_blank">Resume</a></li>
+								<li><a href="mailto: morenoalder98@gmail.com">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -113,7 +113,7 @@
 									<li><a href="webProjects.html">Web Projects</a></li>
 									<li><a href="guiProjects.html">GUI Projects</a></li>
 									<li><a href="miniPrograms.html">Mini Programs</a></li>
-									<li><a href="https://drive.google.com/file/d/1Nj3xPRTv2WB6tv0srPLBVSoQ7_i_Bqms/view?usp=sharing" target="_blank">Resume</a></li>
+									<li><a href="https://drive.google.com/file/d/1k2zYp1jXsXZ638h4ejr0wSJajHi5KzgZ/view?usp=sharing" target="_blank">Resume</a></li>
 								</ul>
 								
 								<ul class="contact">
